2002-07-09  Hironori FUJII  <fujii@chi.its.hiroshima-cu.ac.jp>

	* w3m.el (w3m-highlight-current-anchor): Don't infloop at the
	beginning of a buffer.

2002-07-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-fml.el (shimbun-make-contents): Insert <base> tag.

	* shimbun/sb-kantei.el (shimbun-make-contents): Insert <base> tag.

	* shimbun/sb-mailman.el (shimbun-mailman-make-contents): Use
	`shimbun-header-insert-and-buffer-string'.

	* shimbun/sb-text.el (shimbun-make-contents): Use
	`shimbun-header-insert-and-buffer-string'.

	* shimbun/shimbun.el (shimbun-header-insert-and-buffer-string):
	New function.

	* w3m-perldoc.el (w3m-about-perldoc): Install workaround to
	specify the place in which pod2html generates its cache files.
	Adjust links pointing other perldocs.

2002-07-08  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-namazu.el (shimbun-namazu-group-url-alist): Add
	migemo entry.

2002-07-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mode): Make `list-buffers-directory' to buffer
	local variable.
	(w3m-goto-url): Set title of the URL to `list-buffers-directory'.

	* w3m-tabmenu.el (w3m-switch-buffer): Bind
	`completion-ignore-case' to `t'.

2002-07-08  OKAZAKI Tetsurou  <okazaki@be.to>

	* configure.in: Use `AC_PATH_EMACS' instead of `AC_CHECK_EMACS'.

	* aclocal.m4 (AC_PATH_EMACS): New macro.
	(AC_CHECK_EMACS): Removed.

2002-07-08  SAITO Takuya  <reed@lily.freemail.ne.jp>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Not insert
	`Reply-To' header.

2002-07-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.3 from emacs-w3m-1_3 branch.

2002-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (byte-optimize-form-code-walker): Advise to make it
	optimize throughout the and/or forms.
	(max-specpdl-size): Increase the value by 5 times for Mule 2.

2002-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-accept-japanese-characters): Don't call the external
	command when compiling.